test/fail/di.min
program
    number x
start
    x[0] := 1;
end
